--- a/PackageManager.csproj
+++ b/PackageManager.csproj
@@ -32,7 +32,7 @@
     <InstallUrl>https://raw.githubusercontent.com/gpender/PackageManager/master/Publish/publish.htm/</InstallUrl>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>65</ApplicationRevision>
+    <ApplicationRevision>66</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -103,6 +103,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Controls.Input.Toolkit, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Windows.Controls.Input.Toolkit.Design, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Windows.Controls.Input.Toolkit.VisualStudio.Design, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
@@ -130,8 +131,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CustomControls\TargetFolderOptionsListView.cs" />
     <Compile Include="Model\DependencyConflict.cs" />
     <Compile Include="Model\DeviceDescription-1_0.cs" />
+    <Compile Include="Model\FolderProxy.cs" />
     <Compile Include="Model\HelpFileProxy.cs" />
     <Compile Include="Model\LibraryProxy.cs" />
     <Compile Include="Model\LoadAssemblyAttributesProxy.cs" />
@@ -145,6 +148,9 @@
     <Compile Include="ViewModels\Command\RelayCommand.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
+    <Compile Include="Views\ComponentItemFoldersUC.xaml.cs">
+      <DependentUpon>ComponentItemFoldersUC.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ComponentsGeneralUC.xaml.cs">
       <DependentUpon>ComponentsGeneralUC.xaml</DependentUpon>
     </Compile>
@@ -175,6 +181,9 @@
     <Compile Include="Views\ComponentItemDependenciesUC.xaml.cs">
       <DependentUpon>ComponentItemDependenciesUC.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ConfirmDialogCW.xaml.cs">
+      <DependentUpon>ConfirmDialogCW.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\EditPluginDependency.xaml.cs">
       <DependentUpon>EditPluginDependency.xaml</DependentUpon>
     </Compile>
@@ -183,6 +192,9 @@
     </Compile>
     <Compile Include="Views\NewHelpFile.xaml.cs">
       <DependentUpon>NewHelpFile.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NewFolder.xaml.cs">
+      <DependentUpon>NewFolder.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\NewLibrary.xaml.cs">
       <DependentUpon>NewLibrary.xaml</DependentUpon>
@@ -211,6 +223,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\ComponentItemFoldersUC.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\ComponentsGeneralUC.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -251,6 +267,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Views\ConfirmDialogCW.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\EditPluginDependency.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -260,6 +280,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\NewHelpFile.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\NewFolder.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -301,6 +325,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Resource Include="Resources\NonEmbedded\parker.ico" />
+    <EmbeddedResource Include="Resources\Images\parker.ico" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -308,6 +334,7 @@
     <None Include="app.config" />
     <Content Include=".gitattributes" />
     <Content Include=".gitignore" />
+    <EmbeddedResource Include="Resources\Files\emptyPackage.manifest" />
     <Content Include="PackageXSD\template.xml" />
     <None Include="PackageXSD\package.xsd">
       <SubType>Designer</SubType>
