--- a/PackageManager.csproj
+++ b/PackageManager.csproj
@@ -111,6 +111,7 @@
     <Reference Include="System.Windows.Controls.Layout.Toolkit.Design, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Windows.Controls.Layout.Toolkit.VisualStudio.Design, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -131,6 +132,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CustomControls\TreeViewEx.cs" />
     <Compile Include="CustomControls\TargetFolderOptionsListView.cs" />
     <Compile Include="Model\DependencyConflict.cs" />
     <Compile Include="Model\DeviceDescription-1_0.cs" />
@@ -146,6 +148,7 @@
     </Compile>
     <Compile Include="Serialization\SerializationExtensions.cs" />
     <Compile Include="ViewModels\Command\RelayCommand.cs" />
+    <Compile Include="Resources\Converters\Converters.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="Views\ComponentItemFoldersUC.xaml.cs">
@@ -335,6 +338,19 @@
     <Content Include=".gitattributes" />
     <Content Include=".gitignore" />
     <EmbeddedResource Include="Resources\Files\emptyPackage.manifest" />
+    <Content Include="lib\System.Windows.Controls.DataVisualization.Toolkit.Design.4.0.dll" />
+    <Content Include="lib\System.Windows.Controls.DataVisualization.Toolkit.dll" />
+    <Content Include="lib\System.Windows.Controls.DataVisualization.Toolkit.Expression.Design.dll" />
+    <Content Include="lib\System.Windows.Controls.DataVisualization.Toolkit.VisualStudio.Design.dll" />
+    <Content Include="lib\System.Windows.Controls.Input.Toolkit.Design.dll" />
+    <Content Include="lib\System.Windows.Controls.Input.Toolkit.dll" />
+    <Content Include="lib\System.Windows.Controls.Input.Toolkit.VisualStudio.Design.dll" />
+    <Content Include="lib\System.Windows.Controls.Layout.Toolkit.Design.dll" />
+    <Content Include="lib\System.Windows.Controls.Layout.Toolkit.dll" />
+    <Content Include="lib\System.Windows.Controls.Layout.Toolkit.VisualStudio.Design.dll" />
+    <Content Include="lib\WPFToolkit.Design.dll" />
+    <Content Include="lib\WPFToolkit.dll" />
+    <Content Include="lib\WPFToolkit.VisualStudio.Design.dll" />
     <Content Include="PackageXSD\template.xml" />
     <None Include="PackageXSD\package.xsd">
       <SubType>Designer</SubType>
